- bbsengine5/py/: updated Makefile and updateversion.sh

--- a/py/Makefile
+++ b/py/Makefile
@@ -2,3 +2,12 @@ all:
 
 clean:
 	-rm *~
+
+version:
+	./updateversion.sh
+
+build: version
+	./setup.py build
+
+install: version build
+	sudo ./setup.py install
